# company_employees

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
company/: Dockerfile  aggregates.py  entities.py  main.py  orms.py  repositories.py
company/infrastucture/database/: config.py  repositories.py
company/infrastucture/http/: clients.py  config.py
company_employee_relationship/: Dockerfile  entities.py  main.py  orms.py  repositories.py
company_employee_relationship/infrastucture/database/: config.py  repositories.py  tools.py
employee/: Dockerfile  entities.py  main.py  orms.py  repositories.py
employee/infrastucture/database/: repositories.py
microservices/: dto.py  routes.py
